[gd_scene load_steps=6 format=3 uid="uid://um34qhou35g7"]

[ext_resource type="Script" path="res://Scenes/secret_entrance.gd" id="1_0fiib"]
[ext_resource type="TileSet" uid="uid://cx0qorxke157p" path="res://Art/TileSets/world.tres" id="3_16esi"]
[ext_resource type="PackedScene" uid="uid://o82thxf3f15u" path="res://Scenes/Game Components/interact_area.tscn" id="4_md3jf"]
[ext_resource type="PackedScene" uid="uid://byspofj24xg1f" path="res://Scenes/player.tscn" id="8_5onbb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qaltp"]
size = Vector2(20, 37)

[node name="secret_entrance" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0fiib")

[node name="Collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2(-43, -42)
polygon = PackedVector2Array(-10, 8, 77, 9, 77, 25, 107, 25, 107, 60, 77, 57, 77, 76, -7, 76, -12, -3, -38, -7, -38, 91, 95, 91, 128, 60, 121, 12, 88, -11, -10, -14)

[node name="sec_entrance_exitPoint" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sec_entrance_exitPoint"]
position = Vector2(58, 0.5)
shape = SubResource("RectangleShape2D_qaltp")

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
y_sort_enabled = true
tile_set = ExtResource("3_16esi")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(-196606, 327680, 6, -131070, 327680, 6, -65534, 327680, 6, 2, 327680, 6, 65538, 327680, 6, 131074, 327680, 6, 131073, 327680, 6, 196607, 327680, 6, 196606, 327680, 6, 131070, 327680, 6, 65534, 327680, 6, -2, 327680, 6, -65538, 327680, 6, -131074, 327680, 6, -131073, 327680, 6, -196608, 327680, 6, -196607, 327680, 6, -131075, 327680, 6, -65539, 327680, 6, -3, 1048576, 4, 65533, 327680, 6, 131069, 327680, 6, 196605, 327680, 6, 0, 327680, 6, -65536, 327680, 6, -131072, 327680, 6, -65537, 327680, 6, -1, 327680, 6, 65535, 327680, 6, 131071, 327680, 6, 65536, 327680, 6, 65537, 327680, 6, 1, 327680, 6, -65535, 327680, 6, -131071, 327680, 6, -131076, 327680, 6, -65540, 327680, 6, -4, 327680, 6, 65532, 327680, 6, 131068, 327680, 6, 196604, 327680, 6, 131072, 327680, 6)
layer_1/name = "Hills-1"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-196606, 1245184, 0, 65538, 983040, 0, -131070, 983040, 2, 131074, 1245184, 1, 65539, 1048576, 0, -131069, 1048576, 2, -131068, 1048576, 2, 131073, 1048576, 0, 131072, 1048576, 0, 196607, 1048576, 0, 196606, 1048576, 0, 196605, 1048576, 0, 196604, 1179648, 13, -131076, 1179648, 0, 131068, 1114112, 1, 65532, 1114112, 1, -4, 1114112, 1, -65540, 1114112, 1, -131075, 1048576, 2, -131074, 1048576, 2, -131073, 1048576, 2, -196608, 1048576, 2, -196607, 1048576, 2, 131075, 327680, 0, 131076, 327680, 0, 65540, 1048576, 0, 196612, 327680, 0, 262148, 327680, 0, 327684, 327680, 0, 327683, 327680, 0, 327682, 327680, 0, 327681, 327680, 0, 327680, 327680, 0, 393215, 327680, 0, 393214, 327680, 0, 393213, 327680, 0, 393212, 327680, 0, 393211, 327680, 0, 393210, 327680, 0, 393209, 327680, 0, 393208, 327680, 0, 327672, 327680, 0, 262136, 327680, 0, 196600, 327680, 0, 131064, 327680, 0, 65528, 327680, 0, -8, 327680, 0, -65544, 327680, 0, -131080, 327680, 0, -196616, 327680, 0, -262152, 327680, 0, -327688, 327680, 0, -327687, 327680, 0, -327686, 327680, 0, -327685, 327680, 0, -327684, 327680, 0, -327683, 327680, 0, -327682, 327680, 0, -327681, 327680, 0, -393216, 327680, 0, -393215, 327680, 0, -393214, 327680, 0, -393213, 327680, 0, -393212, 327680, 0, -327676, 327680, 0, -262140, 327680, 0, -196604, 327680, 0, 65530, 327680, 0, -6, 327680, 0, -65542, 327680, 0, -131078, 327680, 0, -196614, 327680, 0, -262150, 327680, 0, -262151, 327680, 0, -196615, 327680, 0, -131079, 327680, 0, -65543, 327680, 0, -7, 327680, 0, 65529, 327680, 0, 131065, 327680, 0, 196601, 327680, 0, 262137, 327680, 0, 327673, 327680, 0, 327674, 327680, 0, 262138, 327680, 0, 196602, 327680, 0, 131066, 327680, 0, 131067, 327680, 0, 65531, 327680, 0, -5, 327680, 0, -65541, 327680, 0, -131077, 327680, 0, -196613, 327680, 0, -262149, 327680, 0, -262148, 327680, 0, -196612, 327680, 0, -196611, 327680, 0, -262147, 327680, 0, -262146, 327680, 0, -196610, 327680, 0, -196609, 327680, 0, -262145, 327680, 0, -327680, 327680, 0, -262144, 327680, 0, -262143, 327680, 0, -327679, 327680, 0, -327678, 327680, 0, -262142, 327680, 0, -262141, 327680, 0, -327677, 327680, 0, -196605, 327680, 0, 196603, 327680, 0, 262139, 327680, 0, 327675, 327680, 0, 327676, 327680, 0, 262140, 327680, 0, 262141, 327680, 0, 327677, 327680, 0, 327678, 327680, 0, 262142, 327680, 0, 262143, 327680, 0, 327679, 327680, 0, 262144, 327680, 0, 196608, 327680, 0, 196609, 327680, 0, 262145, 327680, 0, 262146, 327680, 0, 196610, 327680, 0, 196611, 327680, 0, 262147, 327680, 0, -327689, 327680, 0, -327690, 327680, 0, -327691, 327680, 0, -327692, 327680, 0, -327693, 327680, 0, -327694, 327680, 0, -327695, 327680, 0, -262159, 327680, 0, -196623, 327680, 0, -131087, 327680, 0, -65551, 327680, 0, -15, 327680, 0, 65521, 327680, 0, 131057, 327680, 0, 196593, 327680, 0, 262129, 327680, 0, 327665, 327680, 0, 393201, 327680, 0, 393202, 327680, 0, 393203, 327680, 0, 393204, 327680, 0, 393205, 327680, 0, 393206, 327680, 0, 393207, 327680, 0, -11, 327680, 0, -65547, 327680, 0, -131083, 327680, 0, -196619, 327680, 0, -262155, 327680, 0, -262156, 327680, 0, -262157, 327680, 0, -262158, 327680, 0, -196622, 327680, 0, 65522, 327680, 0, 131058, 327680, 0, 196594, 327680, 0, 262130, 327680, 0, 327666, 327680, 0, 327667, 327680, 0, 262131, 327680, 0, 196595, 327680, 0, 131059, 327680, 0, 65523, 327680, 0, -196621, 327680, 0, -196620, 327680, 0, 65524, 327680, 0, 131060, 327680, 0, 196596, 327680, 0, 262132, 327680, 0, 327668, 327680, 0, 327669, 327680, 0, 262133, 327680, 0, 196597, 327680, 0, 131061, 327680, 0, 65525, 327680, 0, 65526, 327680, 0, -10, 327680, 0, -65546, 327680, 0, -131082, 327680, 0, -196618, 327680, 0, -262154, 327680, 0, -262153, 327680, 0, -196617, 327680, 0, -131081, 327680, 0, -65545, 327680, 0, -9, 327680, 0, 65527, 327680, 0, 131063, 327680, 0, 131062, 327680, 0, 196598, 327680, 0, 262134, 327680, 0, 327670, 327680, 0, 327671, 327680, 0, 262135, 327680, 0, 196599, 327680, 0, -65549, 1245184, 16, -131086, 1179648, 15, -65550, 1179648, 16, -14, 1179648, 17, -131085, 1245184, 15, -13, 1245184, 17, -131084, 1310720, 15, -65548, 1310720, 16, -12, 1310720, 17, -327696, 327680, 0, -327697, 327680, 0, -262160, 327680, 0, -262161, 327680, 0)
layer_2/name = "Hills-2"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(-8, 1114112, 1, -65544, 1114112, 0, 65528, 1114112, 2, 65527, 1179648, 0, -65545, 1048576, 0, -65546, 1048576, 0, -65547, 1179648, 1, -131083, 1114112, 1, 131063, 1114112, 1, 196599, 1114112, 1, -327689, 1048576, 2, -327690, 1048576, 2, -327691, 1048576, 2, -327692, 1048576, 2, -196619, 1114112, 0, -196620, 1048576, 0, -196621, 1048576, 0, -196622, 1048576, 0, -327693, 1048576, 2, -327694, 983040, 2, -393224, 1114112, 1, -458760, 1114112, 13, 262135, 1114112, 1, 327671, 1114112, 2, 327670, 1179648, 0, 393206, 1114112, 2, 393205, 1179648, 0, -9, 327680, 0, -10, 327680, 0, -11, 327680, 0, 65526, 327680, 0, 65525, 327680, 0, 131062, 327680, 0, 196598, 327680, 0, 131061, 327680, 0, 196597, 327680, 0, 262133, 327680, 0, 262134, 327680, 0, 327669, 327680, 0, 327668, 327680, 0, 327667, 327680, 0, 327666, 327680, 0, 327665, 327680, 0, 262132, 327680, 0, 262131, 327680, 0, 262130, 327680, 0, 262129, 327680, 0, -196623, 1048576, 0, -131087, 327680, 0, -65551, 327680, 0, -15, 327680, 0, 65521, 327680, 0, 131057, 327680, 0, 196593, 327680, 0, 196596, 327680, 0, 131060, 327680, 0, 65524, 327680, 0, -131084, 131072, 0, -65550, 0, 1, 65522, 327680, 0, 131058, 327680, 0, 196594, 327680, 0, 196595, 327680, 0, 131059, 327680, 0, 65523, 327680, 0, -196624, 327680, 0, -131088, 327680, 0, -65552, 327680, 0, -16, 327680, 0, 65520, 327680, 0, 131056, 327680, 0, 196592, 327680, 0, 262128, 327680, 0, 327664, 327680, 0, 393204, 327680, 0, 393203, 327680, 0, 393202, 327680, 0, 393201, 327680, 0, 393200, 327680, 0, -327688, 1114112, 2, -393225, 327680, 0, -393226, 327680, 0, -393227, 327680, 0, -393228, 327680, 0, -393229, 327680, 0, -393230, 983040, 1, -131086, 0, 0, -131085, 65536, 0, -65548, 131072, 1, -12, 131072, 2, -13, 65536, 2, -14, 0, 2, -262161, 1114112, 0, -196625, 327680, 0, -131089, 327680, 0, -65553, 327680, 0, -17, 327680, 0, 65519, 327680, 0, 131055, 327680, 0, 196591, 327680, 0, 262127, 327680, 0, 327663, 327680, 0, 393199, 327680, 0)
layer_3/name = "Small Plants"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array(-131075, 917508, 5, -196611, 983044, 3, -196610, 786436, 4, -262150, 786436, 5, 131064, 983044, 3, 131069, 983044, 1, 65533, 917508, 0, 262143, 917508, 1, -131074, 917508, 4, 131070, 917508, 2, -65543, 524292, 5, -262151, 524292, 6, -262158, 458756, 6, 196600, 458756, 3, -327678, 131076, 6, 131074, 131076, 6, 196610, 131076, 7, 393211, 4, 6, -131071, 524292, 7, 65536, 458756, 6, 65537, 524292, 5, -1, 524292, 6, -65534, 524292, 5)
layer_4/name = "Trees"
layer_4/enabled = true
layer_4/modulate = Color(1, 1, 1, 1)
layer_4/y_sort_enabled = true
layer_4/y_sort_origin = 0
layer_4/z_index = 1
layer_4/tile_data = PackedInt32Array(196609, 4, 0, -262140, 4, 0, -327680, 4, 3, -327683, 4, 3, -262149, 196612, 0, -6, 4, 0, 196604, 4, 0, 327678, 196612, 3, 262137, 4, 3, -196616, 196612, 3, -12, 4, 0, -327692, 4, 3, -196624, 4, 3, 131058, 196612, 3, 327667, 4, 3, 196597, 589828, 4, 131065, 589828, 2, -15, 655364, 6, 65519, 196612, 0, 262128, 196612, 0, 393199, 196612, 3, 262148, 196612, 3, 393208, 4, 0, -393233, 4, 3, -458749, 196612, 3, -393222, 589828, 2)

[node name="player" parent="." instance=ExtResource("8_5onbb")]
position = Vector2(-40, -27)

[node name="Exit" type="Node2D" parent="."]
z_index = 2
position = Vector2(-40, -8)

[node name="Interactable" parent="Exit" instance=ExtResource("4_md3jf")]
interactable_label = "consider"

[connection signal="body_entered" from="sec_entrance_exitPoint" to="." method="_on_sec_entrance_exit_point_body_entered"]
[connection signal="body_exited" from="sec_entrance_exitPoint" to="." method="_on_sec_entrance_exit_point_body_exited"]
